<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>minimal_data_sharing</name>
  <version>0.0.1</version>
  <description>Examples of minimal real-time capable data sharing strategies</description>
  <maintainer email="carlos.svic@gmail.com">Carlos San Vicente</maintainer>
  <license>Apache License 2.0</license>
  <author>Carlos San Vicente</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>iceoryx_utils</build_depend>
  <build_depend>apex_containers</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>iceoryx_utils</exec_depend>
  <exec_depend>apex_containers</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
