<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>minimal_memory_allocator</name>
  <version>0.0.1</version>
  <description>Examples of minimal of usage of real-time capable memory allocators</description>
  <maintainer email="carlos.svic@gmail.com">Carlos San Vicente</maintainer>
  <license>Apache License 2.0</license>
  <author>Carlos San Vicente</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tlsf</build_depend>
  <build_depend>tlsf_cpp</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tlsf</exec_depend>
  <exec_depend>tlsf_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
