<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_realtime_examples</name>
  <version>0.0.1</version>
  <description>ros_realtime_examples metapackage</description>
  <maintainer email="carlos.svic@gmail.com">Carlos San Vicente</maintainer>
  <license>Apache License 2.0</license>
  <author>Carlos San Vicente</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>minimal_cpu_affinity</build_depend>
  <build_depend>minimal_data_sharing</build_depend>
  <build_depend>minimal_dds_tuning</build_depend>
  <build_depend>minimal_deadline_qos</build_depend>
  <build_depend>minimal_lifecycle</build_depend>
  <build_depend>minimal_loaned_messages</build_depend>
  <build_depend>minimal_memory_allocator</build_depend>
  <build_depend>minimal_memory_check</build_depend>
  <build_depend>minimal_memory_lock</build_depend>
  <build_depend>minimal_realtime_loop</build_depend>
  <build_depend>minimal_scheduling</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
